syntax = "proto3";

package taskify;

option go_package = "./backend/proto;taskify";  // Update this with the correct path

// The Task message represents a task entity.
message Task {
    int64 taskId = 1;            // Unique identifier for the task
    string title = 2;
    string description = 3;       // Detailed description of the task
    int64 deadline = 4;           // Deadline timestamp for the task
    string exitCriteria = 5;      // Exit criteria for completing the task
    bool complete = 6;            // Status of task completion
}

// Request and Response messages
message TaskRequest {
    Task task = 1;  // The task to create or update
}

message TaskResponse {
    Task task = 1;  // The task response after creation or update
}

message UpdateTaskResponse {
    Task task = 1;  // Updated task response
}

message DeleteTaskResponse {
    bool success = 1;  // Indicates if the task was successfully deleted
}


message ListTaskResponse {
    repeated Task tasks = 1;  // List of tasks returned
}

// The TaskService defines RPC methods for managing tasks
service TaskService {
    rpc CreateTask(TaskRequest) returns (TaskResponse);   // Create a new task
    rpc UpdateTask(TaskRequest) returns (TaskResponse);   // Update an existing task
    rpc DeleteTask(TaskRequest) returns (DeleteTaskResponse);  // Delete a task
    rpc ListTask(TaskRequest) returns (ListTaskResponse);  // List all tasks
}
